# icu_nurse_handoff

./: .gitignore  Input_Baseline.xlsx  Input_Data.xlsx  Output_Framework.xlsx  pyproject.toml
data/: Input_Baseline_P1.xlsx  Input_Data_P1.xlsx
notebooks/: 01_extract.ipynb  02_interpret.ipynb  03_synthesize.ipynb  ICU_Nurse_Handoff.ipynb  colab_pipeline.ipynb  pipeline.ipynb  summary_evaluation.ipynb
prompts/: extractor_flowsheet.md  extractor_imaging.md  extractor_lab.md  extractor_medication.md  extractor_nursing.md  extractor_physician.md  extractor_procedure.md  extractor_risk.md  generator.md  interpreter.md  synthesizer.md  validator.md
src/: batch.py  config.py  eval.py  extractors.py  generator.py  interpreter.py  llm.py  loader.py  schemas.py  synthesizer.py  validator.py
